# KedroPipelines

./: OpenRepair quick EDA.ipynb  pyproject.toml  requirements.txt
.virtual_documents/: OpenRepair quick EDA.ipynb
conf/base/: catalog.yml
conf/base/parameters/: data_processing.yml
src/openrepair/: __init__.py  settings.py
src/openrepair/pipelines/data_processing/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/pipelines/data_processing/: test_pipeline.py
